Update LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Bem-vindo ao meu site pessoal!</h1>
     <p>Profissional em desenvolvimento e administração Oracle PL/SQL, investidor privado, apaixonado por tecnologia e informática.</p>
     <a href="https://github.com/arkilian">Meu GitHub</a> |
-    <a href="https://www.linkedin.com/in/diogo-campos-530b08376/">Meu LinkedIn</a>
+    <a href="https://www.linkedin.com/in/diogo91campos/">Meu LinkedIn</a>
 </body>
 </html>
