--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Diogo Campos - Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Diogo Campos</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Custom CSS -->
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Bem-vindo ao meu site pessoal!</h1>
-    <p>Profissional em desenvolvimento e administração Oracle PL/SQL, investidor privado, apaixonado por tecnologia e informática.</p>
-    <a href="https://github.com/arkilian">Meu GitHub</a> |
-    <a href="https://www.linkedin.com/in/diogo91campos/">Meu LinkedIn</a>
+  <h1>Diogo Campos</h1>
+  <p class="summary">
+    Profissional com 4 anos de experiência em desenvolvimento e administração de bases de dados Oracle PLSQL, com forte domínio em ambientes Linux, Python e virtualização. Demonstro uma elevada capacidade técnica e pensamento analítico aplicado à resolução de problemas complexos e otimização de processos tecnológicos.
+
+Sou investidor privado há 10 anos, com foco especial nas criptomoedas nos últimos 5 anos, motivado pelo interesse na tecnologia subjacente e na sua conexão com a informática. Esta experiência complementa a minha visão estratégica e capacidade de análise, reforçando a minha abordagem metódica e inovadora no trabalho diário.
+
+Tenho uma forte motivação para aprender continuamente e aplicar conhecimentos técnicos avançados em diversos projetos, destacando-me pela dedicação, rigor e orientação para resultados.
+
+  </p>
+  <div class="social-links">
+    <a href="https://github.com/arkilian" target="_blank" aria-label="GitHub"><i class="bi bi-github"></i></a>
+    <a href="https://www.linkedin.com/in/diogo91campos" target="_blank" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+  </div>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
