--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3e%3cpath d='M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z'/%3e%3cpath fill-rule='evenodd' d='M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37c.711-1.28 2.66-2.623 5.468-2.623 2.807 0 4.757 1.343 5.468 2.623A7 7 0 0 0 8 1z'/%3e%3c/svg%3e" type="image/svg+xml" />
   <title>Diogo Campos</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -12,13 +13,31 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
+  <!-- Language Switcher -->
+  <div class="language-switcher">
+    <button class="lang-btn" data-lang="en" aria-label="English">
+      <span class="flag">EN</span>
+    </button>
+    <button class="lang-btn" data-lang="pt" aria-label="Português">
+      <span class="flag">PT</span>
+    </button>
+  </div>
+
   <h1>Diogo Campos</h1>
-  <p class="summary">
-    Profissional com 4 anos de experiência em desenvolvimento e administração de bases de dados Oracle PLSQL, com forte domínio em ambientes Linux, Python e virtualização. Demonstro uma elevada capacidade técnica e pensamento analítico aplicado à resolução de problemas complexos e otimização de processos tecnológicos.
+  <p class="summary" 
+  
+  data-en="Professional with 4 years of experience in Oracle PL/SQL database development and administration, with strong expertise in Linux environments, Python, and virtualization. I demonstrate a high technical capacity and analytical thinking applied to solving complex problems and optimizing technological processes.
 
-Sou investidor privado há 10 anos, com foco especial nas criptomoedas nos últimos 5 anos, motivado pelo interesse na tecnologia subjacente e na sua conexão com a informática. Esta experiência complementa a minha visão estratégica e capacidade de análise, reforçando a minha abordagem metódica e inovadora no trabalho diário.
+I have been a private investor since 2015, with a special focus on cryptocurrencies since 2020, driven by interest in the underlying technology and its connection to computer science. This experience complements my strategic vision and analytical capacity, reinforcing my methodical and innovative approach in daily work.
 
-Tenho uma forte motivação para aprender continuamente e aplicar conhecimentos técnicos avançados em diversos projetos, destacando-me pela dedicação, rigor e orientação para resultados.
+I have a strong motivation to continuously learn and apply advanced technical knowledge in various projects, standing out for my dedication, rigor, and results orientation." 
+
+
+data-pt="Profissional com 4 anos de experiência em desenvolvimento e administração de bases de dados Oracle PLSQL, com forte domínio em ambientes Linux, Python e virtualização. Demonstro uma elevada capacidade técnica e pensamento analítico aplicado à resolução de problemas complexos e otimização de processos tecnológicos.
+
+Sou investidor privado desde 2015, com foco especial nas criptomoedas desde 2020, motivado pelo interesse na tecnologia subjacente e na sua conexão com a informática. Esta experiência complementa a minha visão estratégica e capacidade de análise, reforçando a minha abordagem metódica e inovadora no trabalho diário.
+
+Tenho uma forte motivação para aprender continuamente e aplicar conhecimentos técnicos avançados em diversos projetos, destacando-me pela dedicação, rigor e orientação para resultados.">
 
   </p>
   <div class="social-links">
@@ -28,5 +47,43 @@ Tenho uma forte motivação para aprender continuamente e aplicar conhecimentos 
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Language Switcher Script -->
+  <script>
+    const langButtons = document.querySelectorAll('.lang-btn');
+    const summary = document.querySelector('.summary');
+    const htmlTag = document.querySelector('html');
+
+    // Load saved language or default to Portuguese
+    const savedLang = localStorage.getItem('language') || 'pt';
+    setLanguage(savedLang);
+
+    langButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        const lang = btn.getAttribute('data-lang');
+        setLanguage(lang);
+        localStorage.setItem('language', lang);
+      });
+    });
+
+    function setLanguage(lang) {
+      htmlTag.setAttribute('lang', lang);
+      
+      // Update active button
+      langButtons.forEach(btn => {
+        if (btn.getAttribute('data-lang') === lang) {
+          btn.classList.add('active');
+        } else {
+          btn.classList.remove('active');
+        }
+      });
+
+      // Update content
+      const text = summary.getAttribute(`data-${lang}`);
+      if (text) {
+        summary.textContent = text;
+      }
+    }
+  </script>
 </body>
 </html>
