--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Custom CSS -->
-  <link href="styles.css" rel="stylesheet" />
+  <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
   <!-- Language Switcher -->
