Add navigation bar with projects dropdown and back button for improved user experience

--- a/backtest/index.html
+++ b/backtest/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0; url=RELATORIO_ADAUSC_20200101_a_20251231.html">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=RELATORIO_ADAUSC_20200101_a_20251231.html">
+  <title>Backtest Report</title>
+</head>
+<body>
+  Redirecionando...
+</body>
+</html>
