--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
   <link href="./styles.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- Language Switcher -->
-  <div class="language-switcher">
-    <button class="lang-dropdown-btn" id="langDropdownBtn" aria-label="Language Selector">
-      <i class="bi bi-globe"></i>
-      <span id="currentLang">PT</span>
-      <i class="bi bi-chevron-down"></i>
-    </button>
-    <div class="lang-dropdown-menu" id="langDropdownMenu">
+  <!-- Navigation -->
+  <nav class="navbar-custom">
+    <div class="nav-container">
+      <!-- Projects Dropdown -->
+      <div class="projects-dropdown">
+        <button class="projects-btn" id="projectsDropdownBtn" aria-label="Projetos" aria-expanded="false">
+          <span data-pt="Projetos" data-en="Projects">Projetos</span>
+          <i class="bi bi-chevron-down"></i>
+        </button>
+        <div class="projects-dropdown-menu" id="projectsDropdownMenu">
+          <a href="./backtest/index.html" class="dropdown-item" data-pt="Backtest" data-en="Backtest">Backtest</a>
+        </div>
+      </div>
+
+      <!-- Language Switcher -->
+      <div class="language-switcher">
+        <button class="lang-dropdown-btn" id="langDropdownBtn" aria-label="Language Selector">
+          <i class="bi bi-globe"></i>
+          <span id="currentLang">PT</span>
+          <i class="bi bi-chevron-down"></i>
+        </button>
+        <div class="lang-dropdown-menu" id="langDropdownMenu">
       <button class="lang-option" data-lang="pt">
         <span class="flag">🇵🇹</span>
         <span>Português</span>
@@ -30,7 +44,7 @@
         <span>English</span>
       </button>
     </div>
-  </div>
+  </nav>
 
   <h1>Diogo Campos</h1>
   <p class="summary" 
@@ -56,6 +70,33 @@ Tenho uma forte motivação para aprender continuamente e aplicar conhecimentos 
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Projects Dropdown Script -->
+  <script>
+    const projectsBtn = document.getElementById('projectsDropdownBtn');
+    const projectsDropdownMenu = document.getElementById('projectsDropdownMenu');
+
+    // Toggle projects dropdown
+    projectsBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      projectsDropdownMenu.classList.toggle('show');
+      projectsBtn.setAttribute('aria-expanded', projectsDropdownMenu.classList.contains('show'));
+    });
+
+    // Close dropdown when clicking outside
+    document.addEventListener('click', () => {
+      projectsDropdownMenu.classList.remove('show');
+      projectsBtn.setAttribute('aria-expanded', 'false');
+    });
+
+    // Close dropdown when clicking on a link
+    projectsDropdownMenu.querySelectorAll('.dropdown-item').forEach(item => {
+      item.addEventListener('click', () => {
+        projectsDropdownMenu.classList.remove('show');
+        projectsBtn.setAttribute('aria-expanded', 'false');
+      });
+    });
+  </script>
   
   <!-- Language Switcher Script -->
   <script>
