--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <i class="bi bi-chevron-down"></i>
         </button>
         <div class="projects-dropdown-menu" id="projectsDropdownMenu">
-          <a href="./backtest/index.html" class="dropdown-item" data-pt="Backtest" data-en="Backtest">Backtest</a>
+          <a href="./ArkilianAlgoTrade/index.html" class="dropdown-item" data-pt="Backtest" data-en="Backtest">ArkilianAlgoTrade</a>
         </div>
       </div>
 
