--- a/ArkilianAlgoTrade/index.html
+++ b/ArkilianAlgoTrade/index.html
@@ -9,7 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  
   <style>
     :root {
       --bg-1: #0b1020;
@@ -185,7 +184,7 @@
   <div class="page">
     <header>
       <div class="logo-card">
-        <img src="assets/ArkilianAlgoTrade.png" alt="Logomarca ArkilianAlgoTrade">
+        <img src="./assets/images/ArkilianAlgoTrade.png" alt="Logomarca ArkilianAlgoTrade">
       </div>
       <div class="brand">
         <div class="tagline"><span class="pill"></span><span>Futuristic Crypto Trader</span></div>
