--- a/ArkilianAlgoTrade/index.html
+++ b/ArkilianAlgoTrade/index.html
@@ -9,176 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <style>
-    :root {
-      --bg-1: #0b1020;
-      --bg-2: #11172a;
-      --primary: #5df2ff;
-      --accent: #b67bff;
-      --glow: rgba(93, 242, 255, 0.15);
-      --text: #e9f4ff;
-      --muted: #9cb5d3;
-      --border: rgba(255, 255, 255, 0.08);
-      --card: rgba(255, 255, 255, 0.04);
-    }
-
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      font-family: 'Space Grotesk', system-ui, -apple-system, sans-serif;
-      background: radial-gradient(circle at 20% 20%, rgba(91, 192, 255, 0.15), transparent 25%),
-                  radial-gradient(circle at 80% 0%, rgba(182, 123, 255, 0.12), transparent 30%),
-                  linear-gradient(145deg, var(--bg-1), var(--bg-2));
-      color: var(--text);
-      overflow-x: hidden;
-    }
-
-    .grid-bg::before,
-    .grid-bg::after {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background-size: 120px 120px;
-      pointer-events: none;
-      opacity: 0.06;
-      mix-blend-mode: screen;
-    }
-
-    .grid-bg::before { background-image: linear-gradient(rgba(93, 242, 255, 0.15) 1px, transparent 1px), linear-gradient(90deg, rgba(182, 123, 255, 0.15) 1px, transparent 1px); }
-    .grid-bg::after  { background-image: linear-gradient(rgba(255, 255, 255, 0.06) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.06) 1px, transparent 1px); background-size: 60px 60px; }
-
-    .page {
-      position: relative;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 64px 24px 96px;
-      z-index: 1;
-    }
-
-    header {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 32px;
-      margin-bottom: 48px;
-    }
-
-    .brand {
-      flex: 1 1 320px;
-      display: grid;
-      gap: 8px;
-    }
-
-    .logo-card {
-      width: 320px;
-      max-width: 100%;
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 18px;
-      padding: 12px;
-      box-shadow: 0 25px 80px rgba(0, 0, 0, 0.25), 0 0 0 1px rgba(93, 242, 255, 0.05);
-      backdrop-filter: blur(8px);
-      transition: transform 180ms ease, box-shadow 180ms ease;
-    }
-
-    .logo-card:hover { transform: translateY(-4px); box-shadow: 0 30px 90px rgba(0, 0, 0, 0.3), 0 0 12px rgba(93, 242, 255, 0.25); }
-    .logo-card img { width: 100%; display: block; border-radius: 12px; }
-
-    h1 {
-      margin: 0;
-      font-size: clamp(32px, 4vw, 46px);
-      letter-spacing: -0.02em;
-      text-shadow: 0 0 16px rgba(93, 242, 255, 0.35);
-    }
-
-    .subtitle {
-      color: var(--muted);
-      font-size: 16px;
-      max-width: 720px;
-      line-height: 1.6;
-    }
-
-    .tagline {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      padding: 10px 14px;
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 999px;
-      color: var(--primary);
-      font-family: 'JetBrains Mono', monospace;
-      font-size: 12px;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-    }
-
-    .pill { width: 8px; height: 8px; border-radius: 999px; background: var(--primary); box-shadow: 0 0 12px var(--primary); }
-
-    .grid { display: grid; gap: 16px; margin-top: 32px; }
-    @media (min-width: 900px) { .grid { grid-template-columns: repeat(2, minmax(0, 1fr)); } }
-
-    .card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 18px;
-      padding: 22px 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
-      backdrop-filter: blur(6px);
-      position: relative;
-      overflow: hidden;
-      transition: transform 180ms ease, border-color 180ms ease;
-    }
-
-    .card::after {
-      content: '';
-      position: absolute;
-      inset: -40% auto auto -40%;
-      width: 60%;
-      height: 60%;
-      background: radial-gradient(circle, rgba(93, 242, 255, 0.14), transparent 60%);
-      transform: rotate(8deg);
-      pointer-events: none;
-    }
-
-    .card:hover { transform: translateY(-4px); border-color: rgba(93, 242, 255, 0.35); }
-
-    .card h2 {
-      margin: 0 0 12px;
-      font-size: 18px;
-      letter-spacing: -0.01em;
-      color: var(--primary);
-    }
-
-    .card p { margin: 0; color: var(--text); line-height: 1.7; font-size: 15px; }
-
-    .list { margin: 12px 0 0; padding: 0; list-style: none; color: var(--muted); line-height: 1.6; font-size: 14px; }
-    .list li { margin-bottom: 6px; }
-    .list li::before { content: '▹'; color: var(--primary); margin-right: 8px; }
-
-    .cta {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      padding: 14px 18px;
-      margin-top: 28px;
-      border-radius: 12px;
-      border: 1px solid rgba(93, 242, 255, 0.6);
-      background: linear-gradient(120deg, rgba(93, 242, 255, 0.12), rgba(182, 123, 255, 0.12));
-      color: var(--text);
-      text-decoration: none;
-      font-weight: 600;
-      letter-spacing: 0.01em;
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.25), 0 0 20px var(--glow);
-      transition: transform 180ms ease, box-shadow 180ms ease;
-    }
-
-    .cta span { font-family: 'JetBrains Mono', monospace; font-size: 13px; color: var(--primary); }
-    .cta:hover { transform: translateY(-3px); box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3), 0 0 30px rgba(93, 242, 255, 0.25); }
-
-    .mono { font-family: 'JetBrains Mono', monospace; color: var(--muted); font-size: 13px; letter-spacing: 0.02em; }
-  </style>
+  <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body class="grid-bg">
   <div class="page">
