Update backtest context section to reflect operational philosophy and decision-making principles

--- a/ArkilianAlgoTrade/index.html
+++ b/ArkilianAlgoTrade/index.html
@@ -111,9 +111,10 @@
       </article>
 
       <article class="card">
-        <h2 class="mono">Contexto de Backtest</h2>
-        <p class="mono">Relatório utilizado: RELATORIO_ADAUSC_20200101_a_20251231.html</p>
-        <p class="mono">Contexto: trading algorítmico com disciplina de risco e regras auditáveis.</p>
+        <h2>🧠 Filosofia Operacional</h2>
+        <p>ArkilianAlgoTrade não é baseado em previsões, rumores ou emoções.</p>
+        <p style="margin-top:10px;">Cada decisão é resultado de regras explícitas, gestão de risco rigorosa e validação histórica.</p>
+        <p style="margin-top:10px;">O sistema privilegia consistência, sobrevivência e execução disciplinada — porque no mercado, permanecer é vencer.</p>
       </article>
     </div>
   </div>
